--- a/index.html
+++ b/index.html
@@ -5,51 +5,56 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SUMBER FAKTA</title>
 
-  <meta name="description" content="SUMBER FAKTA — portal agregator berita lokal. Ringan, elegan, mobile-friendly." />
+  <!-- SEO -->
+  <meta name="description" content="SUMBER FAKTA — agregator berita Indonesia. Profesional, elegan, dan hemat kuota." />
   <meta property="og:title" content="SUMBER FAKTA" />
-  <meta property="og:description" content="Portal agregator berita lokal. Ringan & elegan." />
+  <meta property="og:description" content="Agregator berita Indonesia. Profesional & elegan." />
   <meta property="og:type" content="website" />
-
   <link rel="icon" href="logo.svg" />
+
+  <!-- No cache supaya update langsung -->
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
 
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root{
-      --accent:#ff6b00; /* aksen oranye */
-      --ink:#0f172a;
+      --ink:#0b1220;        /* teks utama */
+      --muted:#6b7280;      /* teks sekunder */
+      --accent:#0ea5e9;     /* biru elegan */
+      --accent-ink:#0b1220; /* untuk hover kontras */
     }
+    body{ color:var(--ink) }
     .line-clamp-2{ display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden }
     .line-clamp-3{ display:-webkit-box; -webkit-line-clamp:3; -webkit-box-orient:vertical; overflow:hidden }
+    .hero-img{ background-size:cover; background-position:center }
+    .elev{ box-shadow:0 10px 30px rgba(2,6,23,.08) }
     .card{ transition:transform .18s ease, box-shadow .18s ease }
-    .card:hover{ transform:translateY(-2px); box-shadow:0 12px 30px rgba(15,23,42,.12) }
-    .hero-img{ background-size:cover;background-position:center }
+    .card:hover{ transform:translateY(-2px); box-shadow:0 16px 36px rgba(2,6,23,.12) }
     .chip{ border:1px solid rgba(2,6,23,.1); background:#fff }
     .chip.active{ background:var(--accent); color:#fff; border-color:var(--accent) }
-    .badge{ font-size:10px; padding:.1rem .35rem; border-radius:9999px; background:rgba(2,6,23,.08); }
+    .badge{ font-size:10px; padding:.1rem .4rem; border-radius:9999px; background:rgba(2,6,23,.08) }
     .scrollbar-hide::-webkit-scrollbar{ display:none } .scrollbar-hide{ -ms-overflow-style:none; scrollbar-width:none }
     .btn{ transition:filter .18s ease, transform .02s } .btn:active{ transform:translateY(1px) }
+    .skeleton{ animation:pulse 1.2s ease-in-out infinite; background:linear-gradient(90deg,#eef2f7,#f6f7fb,#eef2f7); background-size:200% 100% }
+    @keyframes pulse{ 0%{background-position:200% 0} 100%{background-position:-200% 0} }
   </style>
 </head>
-<body class="bg-slate-50 text-slate-900">
+<body class="bg-slate-50">
   <!-- HEADER -->
-  <header class="sticky top-0 z-40 bg-white/90 border-b border-slate-200 backdrop-blur">
+  <header class="sticky top-0 z-40 bg-white/80 backdrop-blur border-b border-slate-200">
     <div class="max-w-7xl mx-auto px-4 py-3 flex items-center gap-3">
-      <a href="./" class="flex items-center gap-2 shrink-0">
-        <div class="w-9 h-9 rounded-md bg-[var(--accent)] text-white grid place-content-center font-black">SF</div>
-        <div class="leading-tight">
-          <h1 class="text-xl sm:text-2xl font-extrabold tracking-tight">
-            <span>SUMBER</span> <span class="text-[var(--accent)]">FAKTA</span>
-          </h1>
+      <a href="./" class="flex items-center gap-3">
+        <div class="w-10 h-10 rounded-lg bg-[var(--accent)] text-white grid place-content-center font-black tracking-tight">SF</div>
+        <div>
+          <h1 class="text-xl sm:text-2xl font-extrabold tracking-tight">SUMBER <span class="text-[var(--accent)]">FAKTA</span></h1>
           <p class="text-[10px] text-slate-500">by FABARO GROUP</p>
         </div>
       </a>
-
       <div class="flex-1"></div>
-
-      <div class="hidden sm:block w-[360px]">
+      <div class="hidden sm:block w-[380px]">
         <label class="relative block">
           <input id="search" inputmode="search" placeholder="Cari berita, sumber, kategori…" class="w-full rounded-full border-slate-200 bg-slate-100 focus:bg-white focus:outline-none focus:ring-2 focus:ring-[var(--accent)] px-4 py-2 text-sm" />
           <span class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-400 text-xs">/</span>
@@ -57,17 +62,23 @@
       </div>
       <button id="searchBtn" class="sm:hidden px-3 py-1.5 rounded-full border bg-white text-sm">Cari</button>
     </div>
-
-    <!-- Kategori: horizontal scroll, sembunyikan yang kosong -->
+    <!-- NAV KATEGORI -->
     <nav id="cats" class="max-w-7xl mx-auto px-4 pb-3 flex gap-2 overflow-x-auto snap-x scrollbar-hide"></nav>
   </header>
 
   <!-- HOME -->
-  <main id="page-home" class="max-w-7xl mx-auto px-4 py-5 space-y-5">
-    <p id="meta" class="text-xs text-slate-500">Memuat…</p>
+  <main id="page-home" class="max-w-7xl mx-auto px-4 py-6 space-y-6">
+    <div class="flex items-center gap-3 text-xs text-slate-500">
+      <span id="meta">Memuat…</span>
+      <button id="refreshBtn" class="ml-auto btn px-3 py-1.5 rounded-full border bg-white text-[11px]">Segarkan data</button>
+    </div>
 
-    <!-- HERO (1 kolom di hp, 3 kolom di desktop) -->
-    <section id="hero" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4"></section>
+    <!-- HERO -->
+    <section id="hero" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+      <!-- skeleton awal -->
+      <div class="h-44 rounded-xl border bg-white skeleton"></div>
+      <div class="h-44 rounded-xl border bg-white skeleton hidden sm:block"></div>
+    </section>
 
     <!-- GRID -->
     <section>
@@ -76,7 +87,7 @@
       <!-- Empty-state -->
       <div id="empty" class="hidden py-12 text-center text-slate-500">
         <p class="mb-4">Belum ada berita untuk filter ini.</p>
-        <button id="refreshBtn" class="btn px-4 py-2 rounded-full bg-[var(--accent)] text-white">Segarkan data</button>
+        <button id="toAllBtn" class="btn px-4 py-2 rounded-full bg-[var(--accent)] text-white">Lihat semua</button>
       </div>
 
       <div class="mt-6 text-center">
@@ -86,11 +97,11 @@
   </main>
 
   <!-- DETAIL -->
-  <main id="page-article" class="max-w-3xl mx-auto px-4 py-7 hidden">
+  <main id="page-article" class="max-w-3xl mx-auto px-4 py-8 hidden">
     <a href="./" class="text-sm text-[var(--accent)] hover:underline">← Kembali</a>
     <article class="mt-3 bg-white rounded-2xl border shadow-sm overflow-hidden">
       <div id="artCover" class="h-56 sm:h-80 hero-img bg-slate-200"></div>
-      <div class="p-5 sm:p-7 space-y-4">
+      <div class="p-6 sm:p-8 space-y-4">
         <div class="flex flex-wrap items-center gap-3 text-xs text-slate-500">
           <span id="artCat" class="px-2 py-0.5 rounded-full border bg-white"></span>
           <span id="artSource"></span>
@@ -110,7 +121,7 @@
             <a id="shareWa" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="WhatsApp">🟢</a>
             <a id="shareX"  target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="X/Twitter">✖️</a>
             <a id="shareFb" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Facebook">📘</a>
-            <a id="shareTg" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Telegram">💬</a>
+            <button id="copyBtn" class="p-2 rounded-full hover:bg-slate-100" aria-label="Salin tautan">📋</button>
           </div>
         </div>
       </div>
@@ -122,11 +133,22 @@
   </footer>
 
 <script>
-/* ========== KONFIG & UTIL ========== */
+/* ===================== KONFIG & UTIL ===================== */
 const RAW_URL = "https://raw.githubusercontent.com/mukemen/sumberfakta/main/news.json";
 const PREFER_RAW = location.hostname.endsWith(".vercel.app") || location.hostname.endsWith("github.io");
-const ORDER = ["semua","nasional","politik","bisnis","sport","tekno","hiburan","music","movie","hobi"];
 
+// Tampilkan semua chip (meski 0) agar tidak “hilang”
+const SHOW_EMPTY_CHIPS = true;
+
+// Urutan tampil & label rapi
+const CATEGORY_ORDER = ["nasional","politik","bisnis","sport","tekno","hiburan","music","movie","hobi","dunia"];
+const CATEGORY_LABEL = {
+  nasional:"Nasional", politik:"Politik", bisnis:"Bisnis",
+  sport:"Sport", tekno:"Tekno", hiburan:"Hiburan",
+  music:"Musik", movie:"Film", hobi:"Hobi", dunia:"Dunia"
+};
+
+// fallback gambar super ringan
 const FALLBACK_IMG = "data:image/svg+xml;utf8," + encodeURIComponent(
   "<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 18'><rect width='32' height='18' fill='#f1f5f9'/><rect x='3' y='4' width='26' height='10' rx='2' fill='#e2e8f0'/></svg>"
 );
@@ -142,7 +164,6 @@ async function fetchWithTimeout(url, ms=8000){
     new Promise((_,rej)=>setTimeout(()=>rej(new Error("timeout")), ms))
   ]);
 }
-
 async function loadNews(){
   const localURL = "./news.json?nocache="+Date.now();
   const rawURL   = RAW_URL+"?nocache="+Date.now();
@@ -159,37 +180,49 @@ async function loadNews(){
   }
 }
 
-/* ========== CATEGORIES (hide kosong + badge count) ========== */
+/* ===================== DATA HELPERS ===================== */
 function countByCat(items){
   const out = {};
   for (const it of items){
     const c = (it.category || "nasional").toLowerCase();
     out[c] = (out[c]||0) + 1;
   }
-  out["semua"] = items.length;
   return out;
 }
+function allCats(items){
+  const set = new Set(["semua"]);
+  items.forEach(it => set.add((it.category||"nasional").toLowerCase()));
+  // gabungkan dengan ORDER agar urutan konsisten & label rapi
+  const present = Array.from(set);
+  const ordered = ["semua", ...CATEGORY_ORDER.filter(c => present.includes(c))];
+  if (SHOW_EMPTY_CHIPS) {
+    // tambahkan yang belum ada (jadi kelihatan semua tombol)
+    for(const c of CATEGORY_ORDER) if(!ordered.includes(c)) ordered.push(c);
+  }
+  return ordered;
+}
 
+/* ===================== RENDER KATEGORI ===================== */
 function renderCats(){
-  const counts = countByCat(state.items);
   const nav = document.getElementById("cats");
   nav.innerHTML = "";
+  const counts = countByCat(state.items);
+  const cats = allCats(state.items);
 
-  ORDER.forEach(c=>{
-    const n = counts[c] || 0;
-    // tampilkan selalu "semua"; lainnya hanya jika ada isinya
-    if (c !== "semua" && n === 0) return;
+  cats.forEach(c=>{
+    const isAll = (c==="semua");
+    const n = isAll ? state.items.length : (counts[c] || 0);
 
     const btn = document.createElement("button");
     btn.type="button";
     btn.className = "chip snap-start px-3 py-2 rounded-full text-sm whitespace-nowrap flex items-center gap-2 " + (state.cat===c?"active":"");
-    btn.innerHTML = `<span class="capitalize">${c}</span>${c!=="semua"?`<span class="badge">${n}</span>`:""}`;
+    btn.innerHTML = `<span class="capitalize">${isAll ? "semua" : (CATEGORY_LABEL[c] || c)}</span><span class="badge">${n}</span>`;
     btn.onclick = ()=>{ state.cat=c; state.page=1; renderAll(); };
     nav.appendChild(btn);
   });
 }
 
-/* ========== FILTERING ========== */
+/* ===================== FILTERING ===================== */
 function filtered(){
   let list = [...state.items];
   if (state.cat!=="semua") list = list.filter(i=>(i.category||"").toLowerCase()===state.cat);
@@ -200,7 +233,7 @@ function filtered(){
   return list;
 }
 
-/* ========== HERO (3 teratas) ========== */
+/* ===================== HERO ===================== */
 function renderHero(list){
   const el = document.getElementById("hero");
   el.innerHTML="";
@@ -209,7 +242,7 @@ function renderHero(list){
     el.innerHTML = `<div class="col-span-3 text-sm text-slate-500">Belum ada berita.</div>`;
     return;
   }
-  top.forEach((it,idx)=>{
+  top.forEach(it=>{
     const a = document.createElement("a");
     a.href = "#/article/"+idOf(it);
     a.className = "block rounded-xl overflow-hidden border bg-white card";
@@ -218,7 +251,7 @@ function renderHero(list){
       <div class="h-44 sm:h-52 hero-img" style="background-image:url('${bg}')"></div>
       <div class="p-4 space-y-2">
         <div class="text-[11px] text-slate-500 flex items-center gap-2">
-          <span class="px-2 py-0.5 rounded-full border bg-white">${(it.category||"umum")}</span>
+          <span class="px-2 py-0.5 rounded-full border bg-white">${(CATEGORY_LABEL[(it.category||"umum").toLowerCase()] || it.category || "Umum")}</span>
           <span>${it.source||""}</span>
           <span>•</span>
           <time>${fmtTime(it.publishedAt)}</time>
@@ -230,10 +263,10 @@ function renderHero(list){
   });
 }
 
-/* ========== GRID ========= */
+/* ===================== GRID ===================== */
 function renderGrid(){
   const listAll = filtered();
-  const list = listAll.slice(3, 3 + state.page*state.pageSize); // lewati 3 hero
+  const list = listAll.slice(3, 3 + state.page*state.pageSize);
   const grid = document.getElementById("grid");
   const empty = document.getElementById("empty");
   grid.innerHTML = "";
@@ -254,7 +287,7 @@ function renderGrid(){
       <img src="${it.image || FALLBACK_IMG}" alt="${it.title}" class="h-40 w-full object-cover" loading="lazy">
       <div class="p-4 space-y-2">
         <div class="text-[11px] text-slate-500 flex items-center gap-2">
-          <span class="px-2 py-0.5 rounded-full border bg-white">${(it.category||"umum")}</span>
+          <span class="px-2 py-0.5 rounded-full border bg-white">${(CATEGORY_LABEL[(it.category||"umum").toLowerCase()] || it.category || "Umum")}</span>
           <span class="truncate">${it.source||""}</span>
         </div>
         <h3 class="font-semibold leading-snug">${it.title}</h3>
@@ -269,14 +302,14 @@ function renderGrid(){
   document.getElementById("moreBtn").classList.toggle("hidden", !hasMore);
 }
 
-/* ========== META ========= */
+/* ===================== META ===================== */
 function renderMeta(){
   const list = filtered();
   document.getElementById("meta").textContent =
     `Total ${list.length} artikel • diperbarui ${fmtTime(state.generatedAt||new Date())}`;
 }
 
-/* ========== RENDER ALL ========= */
+/* ===================== RENDER ALL ===================== */
 function renderAll(){
   renderCats();
   const list = filtered();
@@ -285,26 +318,30 @@ function renderAll(){
   renderMeta();
 }
 
-/* ========== DETAIL ========= */
+/* ===================== DETAIL ===================== */
 function openArticleById(id){
   const item = state.items.find(it => idOf(it) === id);
   if (!item) { location.hash=""; return; }
 
-  document.getElementById("artTitle").textContent = item.title || "";
-  document.getElementById("artCat").textContent = item.category || "umum";
-  document.getElementById("artSource").textContent = item.source || "";
-  document.getElementById("artTime").textContent = fmtTime(item.publishedAt);
-  document.getElementById("artSummary").textContent = item.summary || "Ringkasan tidak tersedia.";
-  document.getElementById("artLink").href = item.link || "#";
-  document.getElementById("artCover").style.backgroundImage = `url('${item.image || FALLBACK_IMG}')`;
+  artTitle.textContent = item.title || "";
+  artCat.textContent   = CATEGORY_LABEL[(item.category||"umum").toLowerCase()] || item.category || "Umum";
+  artSource.textContent= item.source || "";
+  artTime.textContent  = fmtTime(item.publishedAt);
+  artSummary.textContent = item.summary || "Ringkasan tidak tersedia.";
+  artLink.href = item.link || "#";
+  artCover.style.backgroundImage = `url('${item.image || FALLBACK_IMG}')`;
 
   const u = encodeURIComponent(item.link || location.href);
   const t = encodeURIComponent(item.title || "SUMBER FAKTA");
   shareWa.href = `https://wa.me/?text=${t}%20${u}`;
   shareX.href  = `https://x.com/intent/post?text=${t}&url=${u}`;
   shareFb.href = `https://www.facebook.com/sharer/sharer.php?u=${u}`;
-  shareTg.href = `https://t.me/share/url?url=${u}&text=${t}`;
 
+  copyBtn.onclick = async ()=> {
+    try{ await navigator.clipboard.writeText(item.link || location.href); copyBtn.textContent="✅"; setTimeout(()=>copyBtn.textContent="📋",1200); }catch{}
+  };
+
+  page-home.classList.add("hidden");
   document.getElementById("page-home").classList.add("hidden");
   document.getElementById("page-article").classList.remove("hidden");
   window.scrollTo({top:0,behavior:"smooth"});
@@ -314,7 +351,7 @@ function backHome(){
   document.getElementById("page-home").classList.remove("hidden");
 }
 
-/* ========== ROUTER ========= */
+/* ===================== ROUTER ===================== */
 function router(){
   const h = location.hash;
   if (h.startsWith("#/article/")) openArticleById(h.split("/").pop());
@@ -322,12 +359,12 @@ function router(){
 }
 addEventListener("hashchange", router);
 
-/* ========== INIT ========= */
+/* ===================== INIT ===================== */
 (async ()=>{
-  // akses cepat search (hp: tombol "Cari")
   addEventListener("keydown",e=>{ if(e.key==="/"){ e.preventDefault(); document.getElementById("search")?.focus(); }});
   document.getElementById("searchBtn").onclick=()=>document.getElementById("search").focus();
   document.getElementById("refreshBtn").onclick=()=>location.reload();
+  document.getElementById("toAllBtn").onclick=()=>{ state.cat="semua"; state.page=1; renderAll(); };
 
   document.getElementById("moreBtn").onclick=()=>{ state.page++; renderGrid(); };
 
