--- a/admin.html
+++ b/admin.html
@@ -8,11 +8,13 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
   :root{ --brand:#ef4444; }
-  .card{ box-shadow:0 10px 30px rgba(2,6,23,.08) }
+  body{ color:#0b1220 }
+  .card{ box-shadow:0 12px 32px rgba(2,6,23,.08) }
   .mono{ font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; }
+  .btn{ transition:filter .15s, transform .02s } .btn:active{ transform:translateY(1px) }
 </style>
 </head>
-<body class="bg-slate-50 text-slate-900">
+<body class="bg-slate-50">
   <!-- HEADER -->
   <header class="sticky top-0 z-40 bg-white/90 backdrop-blur border-b">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center gap-3">
@@ -74,13 +76,15 @@
           </label>
           <label class="text-sm">atau Upload gambar
             <input id="imageFile" type="file" accept="image/*" class="mt-1 w-full px-3 py-2 border rounded-lg bg-white" />
-            <div class="text-[11px] text-slate-500 mt-1">Jika diupload → otomatis disimpan ke <code class="mono">images/uploads/</code> repo.</div>
+            <div class="text-[11px] text-slate-500 mt-1">
+              Auto-resize: <b>max width 1280 px</b>, kualitas ~<b>0.85</b> → file lebih kecil.
+            </div>
           </label>
         </div>
 
         <div class="flex items-center gap-2 pt-1">
-          <button id="previewBtn" class="px-4 py-2 rounded-lg bg-slate-900 text-white">Preview</button>
-          <button id="publishBtn" class="px-4 py-2 rounded-lg bg-[var(--brand)] text-white">Publish ke GitHub</button>
+          <button id="previewBtn" class="btn px-4 py-2 rounded-lg bg-slate-900 text-white">Preview</button>
+          <button id="publishBtn" class="btn px-4 py-2 rounded-lg bg-[var(--brand)] text-white">Publish ke GitHub</button>
           <span id="status" class="ml-2 text-sm text-slate-500"></span>
         </div>
       </div>
@@ -119,7 +123,7 @@
           <label class="text-sm">Path file mynews.json
             <input id="gh-path" class="mt-1 w-full px-3 py-2 border rounded-lg mono" value="data/mynews.json" />
           </label>
-          <label class="text-sm">Personal Access Token (scope: <span class="mono">repo</span> + <span class="mono">workflow</span>)
+          <label class="text-sm">Personal Access Token (scope: <span class="mono">repo</span> + opsional <span class="mono">workflow</span>)
             <input id="gh-token" type="password" class="mt-1 w-full px-3 py-2 border rounded-lg" placeholder="ghp_..." />
           </label>
           <div class="flex items-center gap-2">
@@ -127,7 +131,7 @@
             <button id="clearCfg" class="px-3 py-1.5 rounded-lg border bg-white">Hapus</button>
           </div>
           <div class="text-[11px] text-slate-500">
-            Token disimpan di <strong>localStorage</strong> browser kamu (hanya perangkat ini). Jangan bagikan ke orang lain.
+            Token disimpan di <strong>localStorage</strong> (perangkat ini saja). Jangan dibagikan.
           </div>
         </div>
       </div>
@@ -135,35 +139,54 @@
   </main>
 
 <script>
-/* ===== util kecil ===== */
+/* ====================== UTIL ====================== */
 const $ = (id)=>document.getElementById(id);
-const sleep = (ms)=>new Promise(r=>setTimeout(r,ms));
+const CFG_KEYS = ["gh-owner","gh-repo","gh-branch","gh-path","gh-token"];
+
 function fmtTimeLocalVal(d=new Date()){
   const pad=n=>String(n).padStart(2,"0");
-  const y=d.getFullYear(), m=pad(d.getMonth()+1), dd=pad(d.getDate());
-  const hh=pad(d.getHours()), mm=pad(d.getMinutes());
-  return `${y}-${m}-${dd}T${hh}:${mm}`;
+  return `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}T${pad(d.getHours())}:${pad(d.getMinutes())}`;
 }
-function b64Encode(str){ return btoa(unescape(encodeURIComponent(str))); }
-function b64Decode(str){ return decodeURIComponent(escape(atob(str))); }
-function toISOLocal(val){ try { return new Date(val).toISOString(); } catch { return new Date().toISOString(); }}
+function toISOLocal(val){ try { return new Date(val).toISOString(); } catch { return new Date().toISOString(); } }
+function b64EncodeUTF8(str){ return btoa(unescape(encodeURIComponent(str))); }
+function b64DecodeUTF8(str){ return decodeURIComponent(escape(atob(str))); }
 
-/* ===== load/simpan config ke localStorage ===== */
-const CFG_KEYS = ["gh-owner","gh-repo","gh-branch","gh-path","gh-token"];
-(function initCfg(){
-  CFG_KEYS.forEach(k=>{ const v=localStorage.getItem(k); if(v) $(k).value=v; });
+/* Base64 aman untuk file besar (chunked) */
+function arrayBufferToBase64(buf) {
+  const bytes = new Uint8Array(buf);
+  const chunkSize = 0x8000; // 32KB
+  let binary = "";
+  for (let i = 0; i < bytes.length; i += chunkSize) {
+    binary += String.fromCharCode.apply(null, bytes.subarray(i, i + chunkSize));
+  }
+  return btoa(binary);
+}
+
+/* Auto-resize gambar di browser: maxWidth=1280px, kualitas=0.85 */
+async function resizeImageFile(file, maxWidth=1280, quality=0.85){
+  const bitmap = await createImageBitmap(file);
+  const scale = Math.min(1, maxWidth / bitmap.width);
+  const w = Math.round(bitmap.width * scale);
+  const h = Math.round(bitmap.height * scale);
+
+  const canvas = document.createElement("canvas");
+  canvas.width = w; canvas.height = h;
+  const ctx = canvas.getContext("2d");
+  ctx.drawImage(bitmap, 0, 0, w, h);
+
+  const blob = await new Promise(res=>canvas.toBlob(res, "image/jpeg", quality));
+  return blob || file;
+}
+
+/* ================== INIT FORM ================== */
+(function init(){
   if (!$("publishedAt").value) $("publishedAt").value = fmtTimeLocalVal(new Date());
+  CFG_KEYS.forEach(k=>{ const v=localStorage.getItem(k); if(v) $(k).value=v; });
 })();
-$("saveCfg").onclick = ()=>{
-  CFG_KEYS.forEach(k=>localStorage.setItem(k, $(k).value.trim()));
-  alert("Pengaturan tersimpan di browser ini.");
-};
-$("clearCfg").onclick = ()=>{
-  CFG_KEYS.forEach(k=>localStorage.removeItem(k));
-  alert("Pengaturan dihapus dari browser ini.");
-};
+$("saveCfg").onclick = ()=>{ CFG_KEYS.forEach(k=>localStorage.setItem(k, $(k).value.trim())); alert("Pengaturan tersimpan di browser ini."); };
+$("clearCfg").onclick = ()=>{ CFG_KEYS.forEach(k=>localStorage.removeItem(k)); alert("Pengaturan dihapus dari browser ini."); };
 
-/* ===== preview ===== */
+/* ================== PREVIEW ================== */
 function buildDataFromForm(imageFinalURL=""){
   const title = $("title").value.trim();
   const category = $("category").value;
@@ -172,105 +195,94 @@ function buildDataFromForm(imageFinalURL=""){
   const link = $("link").value.trim();
   const contentHtml = $("contentHtml").value.trim() || null;
   const image = imageFinalURL || $("imageUrl").value.trim() || null;
-
-  return { title, category, publishedAt, summary, link, contentHtml, image,
-           source:"FABARO NEWS" };
+  return { title, category, publishedAt, summary, link, contentHtml, image, source:"FABARO NEWS" };
 }
 function renderPreview(d){
   $("pv-title").textContent = d.title || "(judul)";
   $("pv-cat").textContent = d.category || "-";
   $("pv-time").textContent = new Intl.DateTimeFormat("id-ID",{dateStyle:"medium", timeStyle:"short"}).format(new Date(d.publishedAt||Date.now()));
   $("pv-sum").textContent = d.summary || "";
-  $("pv-img").style.backgroundImage = `url('${d.image || "data:image/svg+xml;utf8,"+encodeURIComponent("<svg xmlns=\\'http://www.w3.org/2000/svg\\' viewBox=\\'0 0 32 18\\'><rect width=\\'32\\' height=\\'18\\' fill=\\'#f1f5f9\\'/><rect x=\\'3\\' y=\\'4\\' width=\\'26\\' height=\\'10\\' rx=\\'2\\' fill=\\'#e2e8f0\\'/></svg>") }')`;
+  const placeholder = "data:image/svg+xml;utf8,"+encodeURIComponent("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 18'><rect width='32' height='18' fill='#f1f5f9'/><rect x='3' y='4' width='26' height='10' rx='2' fill='#e2e8f0'/></svg>");
+  $("pv-img").style.backgroundImage = `url('${d.image || placeholder}')`;
 }
 $("previewBtn").onclick = ()=> renderPreview(buildDataFromForm());
 
-/* ===== GitHub API helpers ===== */
-function ghHeaders(){
-  const token = $("gh-token").value.trim();
-  return {
-    "Authorization": `Bearer ${token}`,
-    "Accept": "application/vnd.github+json"
-  };
-}
+/* ================== GitHub API ================== */
 function cfg(){ return {
   owner:$("gh-owner").value.trim(),
   repo:$("gh-repo").value.trim(),
   branch:$("gh-branch").value.trim() || "main",
   path:$("gh-path").value.trim() || "data/mynews.json"
 };}
-
+function ghHeaders(){
+  const token = $("gh-token").value.trim();
+  return { "Authorization": `Bearer ${token}`, "Accept": "application/vnd.github+json" };
+}
 async function getFileContent(owner, repo, path, ref){
   const r = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${encodeURIComponent(path)}?ref=${encodeURIComponent(ref)}`, { headers: ghHeaders() });
   if (r.status === 404) return { exists:false, sha:null, items:[] };
   if (!r.ok) throw new Error("Gagal GET contents: "+r.status);
   const js = await r.json();
-  const decoded = b64Decode(js.content || "");
-  let arr = [];
-  try { arr = JSON.parse(decoded); } catch { arr = []; }
+  const decoded = b64DecodeUTF8(js.content || "");
+  let arr = []; try { arr = JSON.parse(decoded); } catch { arr = []; }
   return { exists:true, sha:js.sha, items:Array.isArray(arr)?arr:[] };
 }
-
 async function putFileContent(owner, repo, path, ref, message, contentB64, sha=null){
   const body = { message, content: contentB64, branch: ref };
   if (sha) body.sha = sha;
   const r = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${encodeURIComponent(path)}`, {
-    method:"PUT",
-    headers: { "Content-Type":"application/json", ...ghHeaders() },
-    body: JSON.stringify(body)
+    method:"PUT", headers: { "Content-Type":"application/json", ...ghHeaders() }, body: JSON.stringify(body)
   });
   if (!r.ok) throw new Error("Gagal PUT contents: "+r.status);
   return r.json();
 }
-
-async function uploadImageToRepo(file){
-  const {owner,repo,branch} = cfg();
-  const ext = (file.name.split(".").pop() || "png").toLowerCase();
-  const fname = `img-${Date.now()}-${Math.random().toString(36).slice(2)}.${ext}`;
-  const path = `images/uploads/${fname}`;
-
-  // file -> base64
-  const buf = await file.arrayBuffer();
-  const b64 = btoa(String.fromCharCode(...new Uint8Array(buf)));
-
-  await putFileContent(owner, repo, path, branch, `chore: upload image ${fname}`, b64, null);
-  // raw URL:
-  return `https://raw.githubusercontent.com/${owner}/${repo}/${branch}/${path}`;
-}
-
 async function triggerWorkflowBuild(){
   const {owner,repo,branch} = cfg();
-  // butuh scope "workflow"
   await fetch(`https://api.github.com/repos/${owner}/${repo}/actions/workflows/build-news.yml/dispatches`, {
-    method:"POST",
-    headers: { "Content-Type":"application/json", ...ghHeaders() },
-    body: JSON.stringify({ ref: branch })
+    method:"POST", headers: { "Content-Type":"application/json", ...ghHeaders() }, body: JSON.stringify({ ref: branch })
   });
 }
 
-/* ===== Publish ===== */
+/* Upload gambar: auto-resize + base64 aman + commit ke repo */
+async function uploadImageToRepo(file){
+  const {owner,repo,branch} = cfg();
+  // Resize dulu → blob (jpeg)
+  const resized = await resizeImageFile(file, 1280, 0.85);
+  // Blob -> ArrayBuffer -> Base64
+  const buf = await resized.arrayBuffer();
+  const b64 = arrayBufferToBase64(buf);
+
+  const ext = "jpg"; // hasil toBlob di atas jpeg
+  const fname = `img-${Date.now()}-${Math.random().toString(36).slice(2)}.${ext}`;
+  const path = `images/uploads/${fname}`;
+
+  await putFileContent(owner, repo, path, branch, `chore: upload image ${fname}`, b64, null);
+  return `https://raw.githubusercontent.com/${owner}/${repo}/${branch}/${path}`;
+}
+
+/* ================== PUBLISH ================== */
 $("publishBtn").onclick = async ()=>{
   try{
     $("status").textContent = "Menyiapkan…";
 
-    // kalau user upload file, simpan dulu
+    // Jika user upload file → upload; kalau tidak, pakai URL
     let imgURL = $("imageUrl").value.trim();
     const imgFile = $("imageFile").files[0];
     if (!imgURL && imgFile){
-      $("status").textContent = "Upload gambar…";
+      $("status").textContent = "Upload gambar (resize)…";
       imgURL = await uploadImageToRepo(imgFile);
     }
 
     const data = buildDataFromForm(imgURL);
     if (!data.title) return alert("Judul wajib diisi.");
+
     renderPreview(data);
 
     const {owner, repo, branch, path} = cfg();
     $("status").textContent = "Ambil mynews.json…";
     const cur = await getFileContent(owner, repo, path, branch);
-
     const items = Array.isArray(cur.items) ? cur.items : [];
-    // item standar untuk build
+
     const newItem = {
       title: data.title,
       link: data.link || "#",
@@ -283,7 +295,7 @@ $("publishBtn").onclick = async ()=>{
     };
     items.unshift(newItem);
 
-    const contentB64 = b64Encode(JSON.stringify(items, null, 2));
+    const contentB64 = b64EncodeUTF8(JSON.stringify(items, null, 2));
     $("status").textContent = "Commit ke GitHub…";
     await putFileContent(owner, repo, path, branch,
       `feat(admin): add mynews "${data.title}"`,
